--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-firebase/app": "^18.6.2",
     "@react-native-firebase/auth": "^18.6.2",
     "@react-native-firebase/firestore": "^18.6.2",
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~49.0.15",
+    "expo": "^49.0.21",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
     "react": "18.2.0",
