--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-table-component": "^1.2.2",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
