--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-firebase/app": "^18.6.2",
     "@react-native-firebase/auth": "^18.6.2",
     "@react-native-firebase/firestore": "^18.6.2",
