--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-reanimated-table": "^0.0.2",
+    "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-table-component": "^1.2.2",
+    "react-native-toast-message": "^2.1.8",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
