--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.10.7",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-firebase/app": "^18.6.2",
@@ -18,8 +19,11 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.21",
+    "expo-camera": "^13.6.0",
+    "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
@@ -29,7 +33,8 @@
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
