--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@expo/metro-config": "^0.10.7",
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-firebase/app": "^18.6.2",
     "@react-native-firebase/auth": "^18.6.2",
     "@react-native-firebase/firestore": "^18.6.2",
@@ -27,9 +28,12 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
+    "react-native-reanimated-table": "^0.0.2",
+    "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-table-component": "^1.2.2",
+    "react-native-toast-message": "^2.1.8",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
