--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "^49.0.21",
     "expo-camera": "^13.6.0",
     "expo-image-picker": "^14.5.0",
@@ -32,8 +33,10 @@
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-table-component": "^1.2.2",
     "react-native-toast-message": "^2.1.8",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
