--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
+    "react-native-camera": "^4.2.1",
     "react-native-reanimated-table": "^0.0.2",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
