--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "expo": "^49.0.21",
-    "expo-camera": "^13.6.0",
-    "expo-image-picker": "^14.5.0",
+    "expo-camera": "~13.4.4",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.0",
     "nativewind": "^2.0.11",
