--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-config": "^0.10.7",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-community/blur": "^4.3.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-firebase/app": "^18.6.2",
     "@react-native-firebase/auth": "^18.6.2",
@@ -20,11 +21,14 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "@types/file-saver": "^2.0.7",
+    "exceljs": "^4.4.0",
     "expo": "^49.0.21",
     "expo-camera": "~13.4.4",
     "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "file-saver": "^2.0.5",
     "firebase": "^10.7.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -32,6 +36,7 @@
     "react-native": "0.72.6",
     "react-native-bootsplash": "^5.2.0",
     "react-native-camera": "^4.2.1",
+    "react-native-fs": "^2.20.0",
     "react-native-reanimated-table": "^0.0.2",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
@@ -41,7 +46,8 @@
     "react-native-table-component": "^1.2.2",
     "react-native-toast-message": "^2.1.8",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
