--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-bootsplash": "^5.2.0",
     "react-native-camera": "^4.2.1",
     "react-native-fs": "^2.20.0",
+    "react-native-paper": "^5.12.1",
     "react-native-reanimated-table": "^0.0.2",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
