--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "expo-status-bar": "~1.6.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.7.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +39,7 @@
     "react-native-bootsplash": "^5.2.0",
     "react-native-camera": "^4.2.1",
     "react-native-fs": "^2.20.0",
+    "react-native-paper": "^5.12.1",
     "react-native-reanimated-table": "^0.0.2",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
